fixed the hamburger position on smallest screen

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -221,7 +221,7 @@
     }
     header #mobile-bars {
         display: block;
-        margin-left: 43vw;
+        margin-left: 35vw;
     }
     header #mobile-bars-check:checked~#mobile-bars>#stik1 {
         transform: rotate(45deg) translateY(7px) translateX(5px);
